# slurmgen

./: .gitignore  LICENSE  README.md  defaults.sexp  dune-project  schema.sexp  slurmgen.opam  test.sexp
lib/: config.ml  dune  schema.ml
test/: dune  test_slurmgen.ml
